# need-for-speed-2025c2-g9

./: .clang-format  .cz.yaml  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CPPLINT.cfg  Makefile  MakefileThreads  README.md  common_wrap_socket.cpp  run_tests.sh
client/: AudioManager.cpp  CMakeLists.txt  MockServer.cpp  cars.csv  cars.yaml  client.cpp  client.h  client_input_handler.h  client_main.cpp  client_protocol.cpp  client_protocol.h  client_receiver.cpp  client_receiver.h  client_sender.cpp  client_sender.h  engine.cpp  game.cpp  game.h  input_system.cpp  input_system.h  lobbyScreen.cpp  lobbyScreen.h  main.cpp  physics_debug_system.cpp  physics_debug_system.h  player.cpp  player.h  renderer_system.cpp  renderer_system.h  resource_loader.h  spritesheet.h  world.cpp  world.h
client/app/: CMakeLists.txt  engine.cpp  engine.h  game.cpp  game.h
client/core/: audio_manager.cpp  audio_manager.h  camera.cpp  camera.h  dto_handler_system.cpp  dto_handler_system.h  engine.cpp  engine.h  game.cpp  game.h  map.h  network_system.cpp  network_system.h  resource_loader.cpp
client/events/: CMakeLists.txt  cheat_end_race_event.h  checkpoint_completed_event.h  checkpoint_event.h  checkpoints_event.h  close_game_event.h  countdown_down_event.h  countdown_go_event.h  event.h  game_finished_event.h  infinite_health_event.h  lap_completed_event.h  new_npc_event.h  npc_hit_event.h  player_collision_event.h  player_events.h  player_game_finished_event.h  player_joined_event.h  player_left_event.h  player_race_finished_event.h  race_finished_event.h  race_info_event.h  upgrade_car_event.h  vehicle_exploded_event.h  wall_collision_event.h
client/graphics/: CMakeLists.txt  background_renderer.cpp  background_renderer.h  checkpoint_renderer.cpp  checkpoint_renderer.h  hud_renderer.cpp  hud_renderer.h  particle_renderer.cpp  particle_renderer.h  particle_system.cpp  particle_system.h  player_renderer.cpp  player_renderer.h  renderer_system.cpp  renderer_system.h  screen_renderer.cpp  screen_renderer.h  spritesheet.cpp  spritesheet.h  text_renderer.cpp  text_renderer.h
client/input/: input_system.cpp  input_system.h
client/lobby/: CMakeLists.txt  background_music.cpp  background_music.h  car.cpp  car.h  car_selection_controller.cpp  car_selection_controller.h  lobby_api.cpp  lobby_api.h  lobby_service.cpp  lobby_service.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  navigation.cpp  navigation.h  player_info.h  qtcsettings.cmake  room_manager.cpp  room_manager.h  rooms_pager.cpp  rooms_pager.h  styles.cpp  styles.h  wait_room_controller.cpp  wait_room_controller.h
client/lobby/assets/: resources.qrc
client/network/: CMakeLists.txt  client.cpp  client.h  client_input_handler.h  client_protocol.cpp  client_protocol.h  client_receiver.cpp  client_receiver.h  client_sender.cpp  client_sender.h  mock_server.cpp  mock_server.h
client/resources/: CMakeLists.txt  resource_loader.cpp  resource_loader.h
client/resources/static/: cars.yaml
client/systems/: CMakeLists.txt  audio_system.cpp  audio_system.h  dto_handler_system.cpp  dto_handler_system.h  event_render_controller.cpp  event_render_controller.h  input_system.cpp  input_system.h  network_system.cpp  player_final_results.h  renderer_system.cpp  renderer_system.h
client/systems/dto_handlers/: CMakeLists.txt  dto_handler.h  send_cars_handler.cpp  send_cars_handler.h  send_checkpoints_handler.cpp  send_checkpoints_handler.h  send_close_game_handler.cpp  send_close_game_handler.h  send_game_finished_handler.cpp  send_game_finished_handler.h  send_initial_race_map_handler.cpp  send_initial_race_map_handler.h  send_lap_completed_handler.cpp  send_lap_completed_handler.h  send_npc_handler.cpp  send_npc_handler.h  send_npc_hit_handler.cpp  send_npc_hit_handler.h  send_player_game_finished_handler.cpp  send_player_game_finished_handler.h  send_player_handler.cpp  send_player_handler.h  send_player_race_finished_handler.cpp  send_player_race_finished_handler.h  send_race_finished_handler.cpp  send_race_finished_handler.h  send_vehicle_checkpoint_handler.cpp  send_vehicle_checkpoint_handler.h  send_vehicle_exploded_handler.cpp  send_vehicle_exploded_handler.h  send_vehicle_wall_collision_handler.cpp  send_vehicle_wall_collision_handler.h  send_vehicles_collision_handler.cpp  send_vehicles_collision_handler.h
client/ui/: CMakeLists.txt  checkpoint_indicator.cpp  checkpoint_indicator.h  explosion.h  minimap.cpp  minimap.h  speedometer.cpp  speedometer.h
client/world/: CMakeLists.txt  camera.cpp  camera.h  checkpoint.h  map.cpp  map.h  player.cpp  player.h  progress_manager.cpp  progress_manager.h  world.cpp  world.h
client_src/: client.cpp  client.h  client_main.cpp  client_protocol.cpp  client_protocol.h  client_receiver.cpp  client_receiver.h  client_sender.h
cmake/: CompilerWarnings.cmake
common/: CMakeLists.txt  broadcaster.cpp  broadcaster.h  car_config.h  client_command.h  command.h  common_codes.h  common_protocol.cpp  common_protocol.h  event.h  foo.cpp  foo.h  liberror.cpp  liberror.h  protocol.cpp  protocol.h  queue.h  resolver.cpp  resolver.h  resolvererror.cpp  resolvererror.h  socket.cpp  socket.h  socket_closed.h  thread.h  vehicle_type_utils.h
common_src/: broadcaster.cpp  broadcaster.h  client_command.h  common_codes.h  common_protocol.cpp  common_protocol.h  nitro_message.h  nitro_state.h  queue.h  socket.cpp  socket.h
docs/: DocumentacionTecnica.md  ManualDeProyecto.md  ManualDeUsuario.md
editor/: CMakeLists.txt  main.cpp
server/: CMakeLists.txt  CarUpgrades.h  LevelSetup.cpp  LevelSetup.h  VehicleSpec.h  YamlParser.cpp  YamlParser.h  acceptor.c  acceptor.cpp  acceptor.h  client_handler.cpp  client_handler.h  client_state.h  command_dispatcher.h  constants.h  game_lobby.cpp  game_lobby.h  game_monitor.cpp  game_monitor.h  game_room.cpp  game_room.h  gameloop.cpp  gameloop.h  lobby.cpp  lobby.h  lobby_worker.cpp  lobby_worker.h  main.cpp  receiver.cpp  receiver.h  sender.cpp  sender.h  server.cpp  server.h  server_input_handler.cpp  spawn.h  (+8 more)
tests/: CMakeLists.txt  foo.cpp  test_protocols.cpp
(+305 files in other folders)
